[parcel.sh] Configuring max perm space for JDK7